# Atividade_2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLANS.md  PRIMING.md  README.md  atividade2.ipynb  backup_atividade_2.sql  backup_atividade_2_reset.sql  compose.yaml  pyproject.toml  render.yaml
database/: README.md
database/ddl_banco/: ddl_atividade_2.sql
database/dumps/: dump_estrutura_vazia.sql  dump_respostas.sql
database/oab_bench/: question.jsonl
database/respostas_alunos/: respostas_discursivas_diego.csv  respostas_discursivas_jose.csv  respostas_discursivas_kaio.csv  respostas_discursivas_paulo.csv  respostas_discursivas_victor.csv  respostas_discursivas_wagner.csv  respostas_objetivas_diego.csv  respostas_objetivas_jose.csv  respostas_objetivas_kaio.csv  respostas_objetivas_paulo.csv  respostas_objetivas_victor.csv  respostas_objetivas_wagner.csv
database/scripts_etl/: import_oab_bench.py  import_oab_exames.py  importar_respostas_atividade_1.py
scripts/: db_backup.sh  db_dump_questions.sh  db_dump_responses.sh  db_dump_root_backup.sh  db_dump_structure.sh  db_migrate_or_create.sh  db_restore_validate.sh  db_up.sh  web_up.sh
src/atividade_2/: __init__.py  audit.py  cli.py  config.py  contracts.py  db.py  (+14 more)
tests/: __init__.py  test_cli.py  test_config.py  test_contracts.py  test_dashboard.py  test_database_dump.py  test_model_aliases.py  test_parser.py  test_pipeline.py  test_project_setup.py  test_prompts.py  test_remote_http.py  test_render_bootstrap.py  test_repositories.py  test_run_judge_service.py  test_web.py
(+13 files in other folders)
